--- a/buildspec.yml
+++ b/buildspec.yml
@@ -2,15 +2,15 @@ version: 0.2
 phases:
   install:
     runtime-versions:
-      nodejs: 12
+      nodejs: 14
     commands:
       - echo "Installing dependencies..."
       - npm install
-      - npm install -g @angular/cli@10.0.8
+      - npm install -g @angular/cli
   build:
     commands:
       - echo "Building Angular project..."
-      - npm run build
+      - ng build
   post_build:
     commands:
       - echo "Updating files in the S3 bucket..."
